--- a/index.html
+++ b/index.html
@@ -231,6 +231,78 @@
 		</div>
 		
 		<hr>
+
+		<div class="row">
+
+<br><br>
+
+<button class="small button">Button</button>
+<button class="small color red button">Button</button>
+<button class="small color green button">Button</button>
+<button class="small color blue button">Button</button>
+
+<br><br>
+
+<button class="small button" disabled>Button</button>
+<button class="small color red button" disabled>Button</button>
+<button class="small color green button" disabled>Button</button>
+<button class="small color blue button" disabled>Button</button>
+
+<br><br>
+
+<ul class="button-group">
+	<li><button class="small button">Button</button></li>
+	<li><button class="small button">Button</button></li>
+	<li><button class="small button">Button</button></li>
+	<li><button class="small button">Button</button></li>
+</ul>
+
+<br><br><br><br>
+
+<button class="button">Button</button>
+<button class="color red button">Button</button>
+<button class="color green button">Button</button>
+<button class="color blue button">Button</button>
+
+<br><br>
+
+<button class="button" disabled>Button</button>
+<button class="color red button" disabled>Button</button>
+<button class="color green button" disabled>Button</button>
+<button class="color blue button" disabled>Button</button>
+
+<br><br>
+
+<ul class="button-group">
+	<li><button class="button">Button</button></li>
+	<li><button class="button">Button</button></li>
+	<li><button class="button">Button</button></li>
+	<li><button class="button">Button</button></li>
+</ul>
+
+<br><br><br><br>
+
+<button class="large button">Button</button>
+<button class="large color red button">Button</button>
+<button class="large color green button">Button</button>
+<button class="large color blue button">Button</button>
+
+<br><br>
+
+<button class="large button" disabled>Button</button>
+<button class="large color red button" disabled>Button</button>
+<button class="large color green button" disabled>Button</button>
+<button class="large color blue button" disabled>Button</button>
+
+<br><br>
+
+<ul class="button-group">
+	<li><button class="large button">Button</button></li>
+	<li><button class="large button">Button</button></li>
+	<li><button class="large button">Button</button></li>
+	<li><button class="large button">Button</button></li>
+</ul>
+		</div>
 			
 		<div class="row">
 			<h4 class="text-center">FORMS</h4>
